Fix bug with blog post images on mobile. I had added 'max-width: 960px' for large screens, but that overrode 'max-width: 100%' for mobile devices. This was fixed by setting the 960px max-width in a media query for larger screens.

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -22,7 +22,6 @@ margin: 0 auto;
 figure.blog-figure img {
 display: block;
 margin: 0 auto;
-max-width: 960px;
 }
 figure.blog-figure figcaption {
 text-align: center;
@@ -45,9 +44,12 @@ div.highlight pre {
 }
 
 @media screen and (min-width: 1199px) {
-div.content section.container.post {
-max-width: 90%;
-}
+  div.content section.container.post {
+    max-width: 90%;
+  }
+  figure.blog-figure img {
+    max-width: 960px;
+  }
 }
 
 @media screen and (min-width: 1920px) {
